2016-08-24  Dan Bernstein  <mitz@apple.com>

        [Cocoa] Can’t "po" WKObject instances
        https://bugs.webkit.org/show_bug.cgi?id=161151

        Reviewed by Anders Carlsson.

        * Shared/Cocoa/WKObject.mm:
        (-[WKObject debugDescription]): Implement and forward to the target or print a generic
          description.

2016-08-24  Brady Eidson  <beidson@apple.com>

        Get timestamps and ids working in WK2 gamepads (and test them!)
        https://bugs.webkit.org/show_bug.cgi?id=161112

        Reviewed by Alex Christensen.

        * Shared/Gamepad/GamepadData.cpp:
        (WebKit::GamepadData::GamepadData):
        (WebKit::GamepadData::encode):
        (WebKit::GamepadData::decode):
        * Shared/Gamepad/GamepadData.h:
        (WebKit::GamepadData::id):
        (WebKit::GamepadData::index): Deleted.
        
        * UIProcess/Gamepad/UIGamepad.cpp:
        (WebKit::UIGamepad::UIGamepad):
        (WebKit::UIGamepad::condensedGamepadData):
        (WebKit::UIGamepad::fullGamepadData): Include the ID for initial WebGamepad creation.
        (WebKit::UIGamepad::gamepadData): Deleted.
        * UIProcess/Gamepad/UIGamepad.h:
        
        * UIProcess/Gamepad/UIGamepadProvider.cpp:
        (WebKit::UIGamepadProvider::snapshotGamepads):
        
        * UIProcess/WebProcessPool.cpp:
        (WebKit::WebProcessPool::gamepadConnected):
        (WebKit::WebProcessPool::setInitialConnectedGamepads):
        
        * WebProcess/Gamepad/WebGamepad.cpp:
        (WebKit::WebGamepad::WebGamepad):
        (WebKit::WebGamepad::updateValues):

2016-08-24  Hunseop Jeong  <hs85.jeong@samsung.com>

        [EFL] Fix test_ewk2_view
        https://bugs.webkit.org/show_bug.cgi?id=161131

        Reviewed by Gyuyoung Kim.

        ewk_view_title_changed: null is treated as the string "null" after r203487.

        ewk_view_page_contents_get: aligned encoding labels after r204605.

        * UIProcess/API/efl/tests/resources/resultMHTML.mht: