@@ -1,3 +1,15 @@
+2016-08-24  Dan Bernstein  <mitz@apple.com>
+
+        Add a convenience function for creating a WKFrameHandleRef from a WKFrameRef without going through WKFrameInfoRef
+        https://bugs.webkit.org/show_bug.cgi?id=161152
+
+        Reviewed by Anders Carlsson.
+
+        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
+        * TestWebKitAPI/Tests/WebKit2/FrameHandle.cpp: Added.
+        (TestWebKitAPI::didFinishLoadForFrame):
+        (TestWebKitAPI::TEST):
+
 2016-08-24  Nan Wang  <n_wang@apple.com>
 
         AX: Add test for line text marker range on iOS
